geçmiş kiralama eklendi

--- a/src/app/AracDetay/arac-detay.component.html
+++ b/src/app/AracDetay/arac-detay.component.html
@@ -125,6 +125,19 @@
               <span>Otomatik</span>
             </div>
           </div>
+
+          <div class="row musteri-detay-list-row-block">
+            <div class="col-md-3">
+              <span>Kilometresi</span>
+            </div>
+            <div class="col-md-1">
+              <span>:</span>
+            </div>
+            <div class="col-md-8">
+              <span>84.500</span>
+            </div>
+          </div>
+
         </div>
         <div class="panel-footer">
           <!-- Panel Footer Left Block -->
@@ -391,7 +404,231 @@
 
   <!-- Alt -->
   <div class="row">
+    <div class="col-md-12">
+      <!-- Panel -->
+      <div class="panel panel-light">
+        <!-- Panel Body -->
+        <div class="panel-body padding-0">
+          <!-- Tab -->
+          <tabset>
+            <!-- Ödemeler -->
+            <tab heading="Geçmiş Kiralamalar" customClass="tab-ozel">
+              <div class="tab-page-content">
+                <!-- Panel -->
+                <div class="panel panel-light" style="border-radius: 5px">
+                  <!-- Panel Body -->
+                  <div class="panel-body" style="padding: 0;">
+                    <div id="kiralama-listele-table-body-block">
+                      <div class="table-responsive">
+                        <table class="table">
+                          <thead>
+                          <th class="kiralama-listele-table-head-text-first">Araç Bilgisi</th>
+                          <th class="kiralama-listele-table-head-text">Çıkış Bilgisi</th>
+                          <th class="kiralama-listele-table-head-text">Dönüş Bilgisi</th>
+                          <th class="kiralama-listele-table-head-text-last" style="text-align: right">Bakiye</th>
+                          </thead>
+                          <tbody>
+                          <tr>
+                            <td class="first-table-cell">
+                              <a href="#">
+                                <div class="kiralama-listele-table-left-block">
+                                  <div class="kiralama-listele-table-left-icon-block">
+                                    <i class="fa fa-car"></i>
+                                  </div>
+                                  <div class="kiralama-listele-table-left-arac-marka-adi">
+                                    <span>Bmw 3 Serisi ( 35 D 8897 )</span>
+                                  </div>
+                                  <div class="kiralama-listele-table-left-musteri-adi">
+                        <span>
+                          Ahmet Elçik
+                        </span>
+                                  </div>
+                                </div>
+                              </a>
+                            </td>
+                            <td style="min-width: 170px">
+                              <a href="#">
+                                <div class="kiralama-listele-table-middle-block">
+                                  <div class="kiralama-listele-table-middle-cikis-tarihi-block">
+                                    <span><i class="fa fa-sign-in fa-rotate-270"></i> 05 Mart 2017 11:35</span>
+                                  </div>
+                                  <div class="kiralama-listele-table-middle-cikis-sube">
+                                    <span><i class="fa fa-map-marker"></i> Denizli Merkez</span>
+                                  </div>
+                                </div>
+                              </a>
+                            </td>
+                            <td style="min-width: 260px">
+                              <a href="#">
+                                <div class="kiralama-listele-table-middle-block">
+                                  <div class="kiralama-listele-table-middle-donus-tarihi-block">
+                                    <span><i class="fa fa-sign-in fa-rotate-90"></i> 06 Mart 2017 11:35</span>
+                                    <span class="kiralama-listele-donus-tarihi-gun-sayisi">( <i class="fa fa-bell"></i> 10 saat sonra )</span>
+                                  </div>
+                                  <div class="kiralama-listele-table-middle-donus-sube">
+                                    <span><i class="fa fa-map-marker"></i> Denizli Merkez</span>
+                                  </div>
+                                </div>
+                              </a>
+                            </td>
+                            <td class="last-table-cell">
+                              <a href="#">
+                                <div class="kiralama-listele-table-right-block">
+                                  <div class="kiralama-listele-table-right-kalan-meblag-block">
+                                    <span>Kalan Meblağ : 25,00 <i class="fa fa-try"></i></span>
+                                  </div>
+                                  <div class="kiralama-listele-table-right-genel-toplam-block">
+                                    <span>Genel Toplam : 100,00 <i class="fa fa-try"></i></span>
+                                  </div>
+                                  <div class="kiralama-listele-table-right-odeme-durumu-block">
+                                    <span><i class="fa fa-minus"></i> ÖDENECEK</span>
+                                  </div>
+                                </div>
+                              </a>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td class="first-table-cell">
+                              <a href="#">
+                                <div class="kiralama-listele-table-left-block">
+                                  <div class="kiralama-listele-table-left-icon-block">
+                                    <i class="fa fa-car"></i>
+                                  </div>
+                                  <div class="kiralama-listele-table-left-arac-marka-adi">
+                                    <span>Bmw 3 Serisi ( 35 D 8897 )</span>
+                                  </div>
+                                  <div class="kiralama-listele-table-left-musteri-adi">
+                        <span>
+                          Ahmet Elçik
+                        </span>
+                                  </div>
+                                </div>
+                              </a>
+                            </td>
+                            <td>
+                              <a href="#">
+                                <div class="kiralama-listele-table-middle-block">
+                                  <div class="kiralama-listele-table-middle-cikis-tarihi-block">
+                                    <span><i class="fa fa-sign-in fa-rotate-270"></i> 05 Mart 2017 11:35</span>
+                                  </div>
+                                  <div class="kiralama-listele-table-middle-cikis-sube">
+                                    <span><i class="fa fa-map-marker"></i> Denizli Merkez</span>
+                                  </div>
+                                </div>
+                              </a>
+                            </td>
+                            <td>
+                              <a href="#">
+                                <div class="kiralama-listele-table-middle-block">
+                                  <div class="kiralama-listele-table-middle-cikis-tarihi-block">
+                                    <span><i class="fa fa-sign-in fa-rotate-90"></i> 06 Mart 2017 11:35</span>
+                                  </div>
+                                  <div class="kiralama-listele-table-middle-cikis-sube">
+                                    <span><i class="fa fa-map-marker"></i> Denizli Merkez</span>
+                                  </div>
+                                </div>
+                              </a>
+                            </td>
+                            <td class="last-table-cell">
+                              <a href="#">
+                                <div class="kiralama-listele-table-right-block">
+                                  <div class="kiralama-listele-table-right-kalan-meblag-block">
+                                    <span>Kalan Meblağ : 25,00 <i class="fa fa-try"></i></span>
+                                  </div>
+                                  <div class="kiralama-listele-table-right-genel-toplam-block">
+                                    <span>Genel Toplam : 100,00 <i class="fa fa-try"></i></span>
+                                  </div>
+                                  <div class="kiralama-listele-table-right-odeme-durumu-block">
+                                    <span><i class="fa fa-minus"></i> ÖDENECEK</span>
+                                  </div>
+                                </div>
+                              </a>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td class="first-table-cell">
+                              <a href="#">
+                                <div class="kiralama-listele-table-left-block">
+                                  <div class="kiralama-listele-table-left-icon-block">
+                                    <i class="fa fa-car"></i>
+                                  </div>
+                                  <div class="kiralama-listele-table-left-arac-marka-adi">
+                                    <span>Bmw 3 Serisi ( 35 D 8897 )</span>
+                                  </div>
+                                  <div class="kiralama-listele-table-left-musteri-adi">
+                        <span>
+                          Ahmet Elçik
+                        </span>
+                                  </div>
+                                </div>
+                              </a>
+                            </td>
+                            <td>
+                              <a href="#">
+                                <div class="kiralama-listele-table-middle-block">
+                                  <div class="kiralama-listele-table-middle-cikis-tarihi-block">
+                                    <span><i class="fa fa-sign-in fa-rotate-270"></i> 05 Mart 2017 11:35</span>
+                                  </div>
+                                  <div class="kiralama-listele-table-middle-cikis-sube">
+                                    <span><i class="fa fa-map-marker"></i> Denizli Merkez</span>
+                                  </div>
+                                </div>
+                              </a>
+                            </td>
+                            <td>
+                              <a href="#">
+                                <div class="kiralama-listele-table-middle-block">
+                                  <div class="kiralama-listele-table-middle-cikis-tarihi-block">
+                                    <span><i class="fa fa-sign-in fa-rotate-90"></i> 06 Mart 2017 11:35</span>
+                                  </div>
+                                  <div class="kiralama-listele-table-middle-cikis-sube">
+                                    <span><i class="fa fa-map-marker"></i> Denizli Merkez</span>
+                                  </div>
+                                </div>
+                              </a>
+                            </td>
+                            <td class="last-table-cell">
+                              <a href="#">
+                                <div class="kiralama-listele-table-right-block">
+                                  <div class="kiralama-listele-table-right-kalan-meblag-block">
+                                    <span>Kalan Meblağ : 25,00 <i class="fa fa-try"></i></span>
+                                  </div>
+                                  <div class="kiralama-listele-table-right-genel-toplam-block">
+                                    <span>Genel Toplam : 100,00 <i class="fa fa-try"></i></span>
+                                  </div>
+                                  <div class="kiralama-listele-table-right-odeme-durumu-block">
+                                    <span><i class="fa fa-minus"></i> ÖDENECEK</span>
+                                  </div>
+                                </div>
+                              </a>
+                            </td>
+                          </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Panel Body -->
+                </div>
+                <!-- Panel -->
+              </div>
+            </tab>
+            <!-- Ödemeler -->
 
+            <!-- Notlar -->
+            <tab heading="Araç Giderleri" customClass="tab-ozel">
+              <div class="tab-page-content">
+
+              </div>
+            </tab>
+            <!-- Notlar -->
+          </tabset>
+          <!-- Tab -->
+        </div>
+        <!-- Panel Body -->
+      </div>
+      <!-- Panel -->
+    </div>
   </div>
   <!-- Alt -->
 </div>
