--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,6 +52,9 @@
 
 /* Müşteri Detay */
 @import "scss/MusteriDetay/musteri-detay.scss";
+
+/* Modal */
+@import "scss/Modal/modal.scss";
 body{
   font-family: 'Roboto', sans-serif;
   font-size:14px;
