--- a/src/app/AracDetay/arac-detay.component.html
+++ b/src/app/AracDetay/arac-detay.component.html
@@ -627,7 +627,7 @@
 
                         <table class="table">
                           <thead>
-                          <th class="gider-listele-table-baslik-text" style="padding-left: 20px;padding-bottom: 20px;padding-top: 20px">Açıklama</th>
+                          <th class="gider-listele-table-baslik-text" style="padding-left: 20px;padding-bottom: 20px;padding-top: 20px">Açıklamas</th>
                           <th class="gider-listele-table-baslik-text">Düzenleme Tarihi</th>
                           <th class="gider-listele-table-baslik-text gider-listele-right-baslik-text" style="padding-right: 20px;padding-bottom: 20px;padding-top: 20px"> <i class="fa fa-sort-numeric-desc"></i> Bakiye</th>
                           </thead>
