araç düzenle component eklendi

--- a/src/app/AracDetay/arac-detay.component.html
+++ b/src/app/AracDetay/arac-detay.component.html
@@ -173,7 +173,7 @@
               <div class="btn-group btn-block" dropdown>
                 <button class="btn btn-default-ozel btn-block" dropdownToggle>DİĞER <span class="caret"></span></button>
                 <ul dropdownMenu role="menu" aria-labelledby="single-button" class="btn-block">
-                  <li role="menuitem"><a href="javascript:void(0)" class="dropdown-item"><i class="fa fa-edit"></i> <span>Düzenle</span></a></li>
+                  <li role="menuitem"><a routerLink="/araclar/5/duzenle" class="dropdown-item"><i class="fa fa-edit"></i> <span>Düzenle</span></a></li>
                   <li role="menuitem"><a href="javascript:void(0)" class="dropdown-item" (click)="showChildModal()"><i class="fa fa-trash-o"></i> <span>Sil</span></a></li>
                 </ul>
               </div>
@@ -181,7 +181,7 @@
             <!-- Diğer Button DropDown -->
             <!-- Ödeme Ekle -->
             <div class="col-md-6">
-              <button id="giderEkleBtn" class="btn btn-danger-ozel btn-block"><i class="fa fa-sign-in fa-rotate-270"></i> Gider Ekle</button>
+              <a routerLink="/araclar/5/gider/yeni" id="giderEkleBtn" class="btn btn-danger-ozel btn-block"><i class="fa fa-sign-in fa-rotate-270"></i> Gider Ekle</a>
             </div>
             <!-- Ödeme Ekle -->
           </div>
