araç detay geçmiş kiralamaya router link eklendi

--- a/src/app/AracDetay/arac-detay.component.html
+++ b/src/app/AracDetay/arac-detay.component.html
@@ -430,7 +430,7 @@
                           <tbody>
                           <tr>
                             <td class="first-table-cell">
-                              <a href="#">
+                              <a routerLink="/kiralamalar/5/detay">
                                 <div class="kiralama-listele-table-left-block">
                                   <div class="kiralama-listele-table-left-icon-block">
                                     <i class="fa fa-car"></i>
@@ -447,7 +447,7 @@
                               </a>
                             </td>
                             <td style="min-width: 170px">
-                              <a href="#">
+                              <a routerLink="/kiralamalar/5/detay">
                                 <div class="kiralama-listele-table-middle-block">
                                   <div class="kiralama-listele-table-middle-cikis-tarihi-block">
                                     <span><i class="fa fa-sign-in fa-rotate-270"></i> 05 Mart 2017 11:35</span>
@@ -459,7 +459,7 @@
                               </a>
                             </td>
                             <td style="min-width: 260px">
-                              <a href="#">
+                              <a routerLink="/kiralamalar/5/detay">
                                 <div class="kiralama-listele-table-middle-block">
                                   <div class="kiralama-listele-table-middle-donus-tarihi-block">
                                     <span><i class="fa fa-sign-in fa-rotate-90"></i> 06 Mart 2017 11:35</span>
@@ -472,7 +472,7 @@
                               </a>
                             </td>
                             <td class="last-table-cell">
-                              <a href="#">
+                              <a routerLink="/kiralamalar/5/detay">
                                 <div class="kiralama-listele-table-right-block">
                                   <div class="kiralama-listele-table-right-kalan-meblag-block">
                                     <span>Kalan Meblağ : 25,00 <i class="fa fa-try"></i></span>
