kiralama detay html dosyasınadaki breadcumb düzeldi

--- a/src/app/KiralamaDetay/kiralama-detay.component.html
+++ b/src/app/KiralamaDetay/kiralama-detay.component.html
@@ -11,7 +11,7 @@
       <ol class="breadcrumb breadcumb-title">
         <li><a href="#">Anasayfa</a></li>
         <li><a href="#">Kiralamalar</a></li>
-        <li><a href="#">#11</a></li>
+        <li><a href="#">35 D 88 97</a></li>
         <li class="active">Detay</li>
       </ol>
       <!-- Breadcumb -->
