--- a/src/app/Giderler/gider-listele.component.html
+++ b/src/app/Giderler/gider-listele.component.html
@@ -4,15 +4,14 @@
     <div class="row">
       <!-- Page Header -->
       <div class="page-head-title">
-        <h2>Kiralama Detay</h2>
+        <h2>Gider Listele</h2>
       </div>
       <!-- Page Header -->
       <!-- Breadcumb -->
       <ol class="breadcrumb breadcumb-title">
         <li><a href="#">Anasayfa</a></li>
-        <li><a href="#">Kiralamalar</a></li>
-        <li><a href="#">35 D 88 97</a></li>
-        <li class="active">Detay</li>
+        <li><a href="#">Giderler</a></li>
+        <li class="active">Listele</li>
       </ol>
       <!-- Breadcumb -->
     </div>
