gider listeleme eklendi

--- a/src/app/solmenu/solmenu.component.html
+++ b/src/app/solmenu/solmenu.component.html
@@ -4,7 +4,7 @@
       <li><a routerLink="/anasayfa"><i class="fa fa-home"></i><span>Anasayfa</span></a></li>
       <li><a routerLink="/araclar"><i class="fa fa-car"></i><span>Araçlar</span></a></li>
       <li class="active"><a routerLink="/musteriler"><i class="fa fa-address-book"></i><span>Müşteriler</span></a></li>
-      <li ><a routerLink="/giderler"><i class="fa fa-address-book"></i><span>Giderler</span></a></li>
+      <li ><a routerLink="/giderler/listele"><i class="fa fa-address-book"></i><span>Giderler</span></a></li>
 
     </ul>
   </div>
