--- a/src/app/MusteriDuzenle/musteri-duzenle.component.html
+++ b/src/app/MusteriDuzenle/musteri-duzenle.component.html
@@ -12,7 +12,7 @@
         <li><a href="#">Anasayfa</a></li>
         <li><a href="#">Müşteriler</a></li>
         <li><a href="#">Ahmet Elçik</a></li>
-        <li class="active">Düzenle</li>
+        <li class="active">Düzenles</li>
       </ol>
       <!-- Breadcumb -->
     </div>
