--- a/src/app/Ui/Form/form.component.html
+++ b/src/app/Ui/Form/form.component.html
@@ -53,11 +53,22 @@
               <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
             </div>
 
-            <div class="form-group has-error">
-              <label for="labelTextarea" class="control-label form-style-ozel-label">Şifre</label>
+            <!-- Textarea -->
+            <div class="form-group has-error-ozel">
+              <label for="labelTextarea" class="control-label form-style-ozel-label">Textarea</label>
               <textarea id="labelTextarea" class="form-control form-style-ozel" placeholder="Birşeyler yaz..."></textarea>
               <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
             </div>
+            <!-- Textarea -->
+
+            <!-- Textarea -->
+            <div class="form-group">
+              <label for="labelTextarea" class="control-label form-style-ozel-label">Textarea</label>
+              <textarea id="labelTextarea" class="form-control form-style-ozel" placeholder="Birşeyler yaz..."></textarea>
+              <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+            </div>
+            <!-- Textarea -->
+
           </form>
           <!-- Form -->
 
