--- a/src/scss/Form/form.scss
+++ b/src/scss/Form/form.scss
@@ -1,3 +1,5 @@
+@import "has-error.scss";
+
 /* Form Input Text */
 .form-style-ozel{
   border: 1px solid #e1e8ed;
@@ -29,5 +31,12 @@
 /* has-error */
 .has-error .checkbox, .has-error .checkbox-inline, .has-error .control-label, .has-error .help-block, .has-error .radio, .has-error .radio-inline, .has-error.checkbox label, .has-error.checkbox-inline label, .has-error.radio label, .has-error.radio-inline label {
   color: #ef5350;
+}
+
+
+.has-error1 .form-control:focus{
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border: 1px solid #ef5350;
 }
 
