textarea border focus eklendi

--- a/src/scss/Form/has-error.scss
+++ b/src/scss/Form/has-error.scss
@@ -14,4 +14,12 @@
   & .help-block{
     color: #ef5350;
   }
+
+  /* TextArea */
+  textarea{
+    border:1px solid #ef5350;
+    &:focus{
+      border:1px solid #ef5350;
+    }
+  }
 }
