--- a/src/app/Ui/Form/form.component.html
+++ b/src/app/Ui/Form/form.component.html
@@ -62,7 +62,7 @@
             <!-- Textarea -->
 
             <!-- Textarea -->
-            <div class="form-group">
+            <div class="form-group has-success-ozel">
               <label for="labelTextarea" class="control-label form-style-ozel-label">Textarea</label>
               <textarea id="labelTextarea" class="form-control form-style-ozel" placeholder="Birşeyler yaz..."></textarea>
               <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
