--- a/src/scss/Form/form.scss
+++ b/src/scss/Form/form.scss
@@ -1,5 +1,5 @@
 @import "has-error.scss";
-@import "has-sucess.scss";
+@import "has-success.scss";
 /* Form Input Text */
 .form-style-ozel{
   border: 1px solid #e1e8ed;
