--- a/src/scss/Form/has-success.scss
+++ b/src/scss/Form/has-success.scss
@@ -18,4 +18,11 @@
       border:1px solid #81c784;
     }
   }
+  /* Form Control */
+  & .form-control{
+    border:1px solid #81c784;
+    &:focus{
+      border:1px solid #81c784;
+    }
+  }
 }
