gereksiz css kaldırıldı

--- a/src/app/Ui/Form/form.component.html
+++ b/src/app/Ui/Form/form.component.html
@@ -69,6 +69,12 @@
             </div>
             <!-- Textarea -->
 
+            <div class="checkbox has-error-ozel">
+              <label>
+                <input type="checkbox"> Check me out
+              </label>
+            </div>
+
           </form>
           <!-- Form -->
 
