has-error checkbox eklendi

--- a/src/app/Ui/Form/form.component.html
+++ b/src/app/Ui/Form/form.component.html
@@ -69,10 +69,13 @@
             </div>
             <!-- Textarea -->
 
-            <div class="checkbox has-error-ozel">
-              <label>
-                <input type="checkbox"> Check me out
-              </label>
+            <div class="has-error-ozel">
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" id="checkboxError" value="option1">
+                  Checkbox with error
+                </label>
+              </div>
             </div>
 
           </form>
