--- a/src/app/Ui/Form/form.component.html
+++ b/src/app/Ui/Form/form.component.html
@@ -72,8 +72,17 @@
             <div class="has-error-ozel">
               <div class="checkbox">
                 <label>
-                  <input type="checkbox" id="checkboxError" value="option1">
+                  <input type="checkbox">
                   Checkbox with error
+                </label>
+              </div>
+            </div>
+
+            <div class="has-success-ozel">
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox">
+                  Checkbox with success
                 </label>
               </div>
             </div>
