--- a/src/app/araclar/araclar.component.html
+++ b/src/app/araclar/araclar.component.html
@@ -21,9 +21,29 @@
 
 
 <div class="container-fluid m-l-230 m-t-15">
-  <!-- Müşteri Listele Table -->
+  <!-- Araç Listele -->
   <div class="row">
-    <div class="col-xs-12">
+
+    <div class="col-md-3">
+      <div class="panel panel-light">
+
+        <!-- Yeni Müşteri Ekle -->
+        <div class="musteri-ekle-block"  style="padding: 10px;">
+          <a routerLink="/araclar/yeni" class="btn btn-primary-ozel btn-block"><i class="fa fa-plus"></i> Yeni Araç </a>
+        </div>
+        <!-- Yeni Müşteri Ekle -->
+        <!-- Müşteri Ara -->
+        <div class="musteri-ara-block" style="padding: 10px;">
+          <form>
+            <input type="text" class="form-control form-style-ozel" placeholder="Müşteri Ara...">
+            <button class="btn btn-success-ozel btn-block m-t-5"><i class="fa fa-search"></i> Ara</button>
+          </form>
+        </div>
+        <!-- Müşteri Ara -->
+      </div>
+    </div>
+
+    <div class="col-md-9">
       <!-- Panel -->
       <div class="panel panel-light" style="border-radius: 5px">
         <!-- Panel Body -->
@@ -96,5 +116,5 @@
       <!-- Panel -->
     </div>
   </div>
-  <!-- Müşteri Listele Table -->
+  <!-- Araç Listele -->
 </div>
