araç search tarafı eklendi

--- a/src/app/araclar/araclar.component.html
+++ b/src/app/araclar/araclar.component.html
@@ -27,19 +27,19 @@
     <div class="col-md-3">
       <div class="panel panel-light">
 
-        <!-- Yeni Müşteri Ekle -->
-        <div class="musteri-ekle-block"  style="padding: 10px;">
+        <!-- Yeni Araç Ekle -->
+        <div class="arac-ekle-block"  style="padding: 10px;">
           <a routerLink="/araclar/yeni" class="btn btn-primary-ozel btn-block"><i class="fa fa-plus"></i> Yeni Araç </a>
         </div>
-        <!-- Yeni Müşteri Ekle -->
-        <!-- Müşteri Ara -->
-        <div class="musteri-ara-block" style="padding: 10px;">
+        <!-- Yeni Araç Ekle -->
+        <!-- Araç Ara -->
+        <div class="arac-ara-block" style="padding: 10px;">
           <form>
-            <input type="text" class="form-control form-style-ozel" placeholder="Müşteri Ara...">
+            <input type="text" class="form-control form-style-ozel" placeholder="Araç Plaka...">
             <button class="btn btn-success-ozel btn-block m-t-5"><i class="fa fa-search"></i> Ara</button>
           </form>
         </div>
-        <!-- Müşteri Ara -->
+        <!-- Araç Ara -->
       </div>
     </div>
 
