--- a/src/app/Ui/Form/form.component.html
+++ b/src/app/Ui/Form/form.component.html
@@ -87,6 +87,40 @@
               </div>
             </div>
 
+
+            <div class="form-group">
+              <label class="control-label form-style-ozel-label">Selectbox</label>
+              <select class="form-control form-style-ozel">
+                <option>Kolojengking</option>
+                <option>Tonggent</option>
+                <option>Bekicot</option>
+                <option>Walang Sangit</option>
+                <option>Undur-undur</option>
+              </select>
+            </div>
+
+            <div class="form-group has-error-ozel">
+              <label class="control-label form-style-ozel-label">Selectbox</label>
+              <select class="form-control form-style-ozel">
+                <option>Kolojengking</option>
+                <option>Tonggent</option>
+                <option>Bekicot</option>
+                <option>Walang Sangit</option>
+                <option>Undur-undur</option>
+              </select>
+            </div>
+
+            <div class="form-group has-success-ozel">
+              <label class="control-label form-style-ozel-label">Selectbox</label>
+              <select class="form-control form-style-ozel">
+                <option>Kolojengking</option>
+                <option>Tonggent</option>
+                <option>Bekicot</option>
+                <option>Walang Sangit</option>
+                <option>Undur-undur</option>
+              </select>
+            </div>
+
           </form>
           <!-- Form -->
 
