--- a/src/app/AracEkle/arac-ekle.component.html
+++ b/src/app/AracEkle/arac-ekle.component.html
@@ -22,6 +22,65 @@
 
 <div class="container-fluid m-l-230 m-t-15">
 
+  <!-- Araç Ekle -->
+  <div class="row">
+    <div class="col-md-12">
+      <!-- Panel -->
+      <div class="panel panel-light">
+        <!-- Panel Heading -->
+        <div class="panel-heading">
+          <!-- Panel Left Block -->
+          <div class="panel-heading-left-block">
+            <span>Müşteri Detay </span>
+          </div>
+          <!-- Panel Heading Left Block -->
+          <!-- Panel Heading Right Block -->
+          <div class="panel-heading-right-block">
+            <a href="#" class="btn btn-danger btn-xs">Button 1</a>
+            <a href="#" class="btn btn-success btn-xs">Button 2</a>
+          </div>
+          <!-- Panel Right Block -->
+        </div>
+        <!-- Panel Heading -->
+        <!-- Panel Body -->
+        <div class="panel-body">
+          <form>
+            <!-- Araç Plaka -->
+            <div class="form-group">
+              <label for="aracPlakaLabel" class="control-label form-style-ozel-label">Araç Plaka</label>
+              <input type="text" class="form-control form-style-ozel" id="aracPlakaLabel" placeholder="Araç Plaka">
+            </div>
+            <!-- Araç Plaka -->
+
+            <!-- Araç Marka -->
+            <div class="form-group">
+              <label class="control-label form-style-ozel-label">Araç Marka</label>
+              <select class="form-control">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+              </select>
+            </div>
+            <!-- Araç Marka -->
+
+          </form>
+        </div>
+        <!-- Panel Body -->
+        <!-- Panel Footer -->
+        <div class="panel-footer">
+          <div class="panel-footer-right-block">
+              <button class="btn btn-success-ozel btn-lg"><i class="fa fa-cloud-upload"></i> Kaydet</button>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+        <!-- Panel Footer -->
+      </div>
+      <!-- Panel -->
+    </div>
+  </div>
+  <!-- Araç Ekle -->
 </div>
 
 
